checkout added,users added

--- a/app/views/store/_cart.html.erb
+++ b/app/views/store/_cart.html.erb
@@ -1,14 +1,15 @@
-<div class='cart-title'>Your Cart</div>
+<div class="cart-title">Your Cart</div>
 <table>
-  <%= render :partial => "cart_item", :collection => cart.items %>
-
-  <tr class='total-line'>
-    <td colspan='2'>Total</td>
-    <td class='total-cell'><%= number_to_currency cart.total_price %></td>
+  <%= render(:partial => "cart_item", :collection => cart.items) %>  
+  
+  <tr class="total-line">
+    <td colspan="2">Total</td>
+    <td class="total-cell"><%= number_to_currency(cart.total_price) %></td>
   </tr>
+
 </table>
-
-<% form_remote_tag :url => { :action => :empty_cart } do %>
-  <%= submit_tag 'Empty Cart' %>
-<% end %>
-
+  
+<!-- START_HIGHLIGHT -->
+<%= button_to "Checkout", :action => 'checkout' %>
+<!-- END_HIGHLIGHT -->
+<%= button_to "Empty cart", :action => :empty_cart %>
