--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -1,37 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- START:jit -->
 <html>
 <head>
   <title>Pragprog Books Online Store</title>
 <!-- START:stylesheet -->
-  <%= stylesheet_link_tag "depot", :media => "all" %><!-- <label id="code.slt"/> -->
+  <%= stylesheet_link_tag "depot", :media => "all" %>
 <!-- END:stylesheet -->
+  <!-- START_HIGHLIGHT -->
   <%= javascript_include_tag :defaults %>
+  <!-- END_HIGHLIGHT -->
 </head>
+<!-- END:jit -->
 <body id="store">
   <div id="banner">
     <%= image_tag("logo.png") %>
-    <%= @page_title || "Pragmatic Bookshelf" %><!-- <label id="code.depot.e.title"/> -->
+    <%= @page_title || "Pragmatic Bookshelf" %>
   </div>
   <div id="columns">
     <div id="side">
-      <% hidden_div_if(@cart.items.empty?, :id => 'cart') do %>
-        <%= render :partial => 'cart', :object => @cart %>
+      <!-- START_HIGHLIGHT -->
+      <!-- START:hidden_div -->
+      <% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
+        <%= render(:partial => "cart", :object => @cart) %>
       <% end %>
+    <!-- END:hidden_div -->
+      <!-- END_HIGHLIGHT -->
+
       <a href="http://www....">Home</a><br />
       <a href="http://www..../faq">Questions</a><br />
       <a href="http://www..../news">News</a><br />
       <a href="http://www..../contact">Contact</a><br />
-      <%= Date.new %><br />
     </div>
     <div id="main">
+      <!-- START:flash -->
       <% if flash[:notice] -%>
         <div id="notice"><%= flash[:notice] %></div>
       <% end -%>
+      <!-- END:flash -->
 
-      <div><%= pluralize(session[:counter], 'visiter') %></div>
-
-      <%= yield :layout %><!-- <label id="code.depot.e.include"/> -->
+      <%= yield :layout %>
     </div>
   </div>
 </body>
