--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,4 +1,4 @@
-<div class="depot-form">
+<div class='depot-form'>
   <% form_tag do %>
     <fieldset>
       <legend>Please Log In</legend>
@@ -12,10 +12,11 @@
         <label for="password">Password:</label>
         <%= password_field_tag :password, params[:password] %>
       </div>
-  
+
       <div>
         <%= submit_tag "Login" %>
       </div>
+
     </fieldset>
   <% end %>
 </div>
