--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -19,18 +19,29 @@
   </div>
   <div id="columns">
     <div id="side">
+    <% if @cart %>
       <!-- START_HIGHLIGHT -->
       <!-- START:hidden_div -->
       <% hidden_div_if(@cart.items.empty?, :id => "cart") do %>
         <%= render(:partial => "cart", :object => @cart) %>
       <% end %>
-    <!-- END:hidden_div -->
+      <!-- END:hidden_div -->
       <!-- END_HIGHLIGHT -->
+    <% end %>
 
       <a href="http://www....">Home</a><br />
       <a href="http://www..../faq">Questions</a><br />
       <a href="http://www..../news">News</a><br />
       <a href="http://www..../contact">Contact</a><br />
+
+      <% if session[:user_id] %>
+        <br />
+        <%= link_to 'Orders', :controller => 'orders' %><br />
+        <%= link_to 'Products', :controller => 'products' %><br />
+        <%= link_to 'Users', :controller => 'users' %><br />
+        <br />
+        <%= link_to 'Logout', :controller => 'admin', :action => 'logout' %>
+      <% end %>
     </div>
     <div id="main">
       <!-- START:flash -->
